Downloads/project_fl-a/test/parser/bad/b_bad_return.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

# недопустимо, чтобы оператор return находился на верхнем уровне
# программы вне тела функции или метода. (с. 16 спецификации)

return
